# QDotPolaronKMC

./: README.md  main_bashversion.py  main_bashversion_spat_disorder.py  parallel_spat_disorder.sh  pyproject.toml  test.py
jobs/: cpu_sample.sh  gpu_sample.sh
legacy/: main_bashversion.py  main_bashversion_spat_disorder.py  parallel.sh  parallel_spat_disorder.sh  test.py  test2.py
scripts/: box_main.py  box_main_bashversion.py
src/: config.py  const.py  hamiltonian_box.py  lattice.py  main_bashversion.py  montecarlo.py  qd_lattice.py  redfield_box.py  utils.py
src/qdotkmc/: __init__.py  backend.py  config.py  const.py  convergence.py  hamiltonian.py  hamiltonian_box.py  lattice.py  montecarlo.py  plot_utils.py  print_utils.py  redfield.py  redfield_box.py  utils.py
src/qdotkmc.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/src/: const.py  montecarlo.py
tests/: box_main.py  qdot.sh  test_conv.py  test_main.py
